Increase spacing between references (fix #106)

--- a/defaults/style.css
+++ b/defaults/style.css
@@ -415,3 +415,6 @@ html {
   font-size: var(--small-size);
 }
 
+.csl-entry {
+  margin-bottom: var(--small-size);
+}
